fix api2 migration parameter issue

--- a/TerraVionTest.html
+++ b/TerraVionTest.html
@@ -102,7 +102,7 @@
       url += '?epochStart=' + epochStart
       url += '&epochEnd=' + epochEnd
       url += '&product=' + product
-      url += '&useInverseY=false'
+      url += '&tms=false'
       url += '&access_token=' + access_token
       return url
     }
